tests/parsing/type_redefinition_in_type/stderr.golden
error: redefinition of type 'b', first definition line 2 column 7
bus.fbd +3:7
   |
 3 | 	type b config
   | 	     ^
bus.fbd +2:7
   |
 2 | 	type b status
   | 	     ^
